# nlp_project

./: .gitignore  README.md  pyproject.toml  test_device.py  test_device_improved.py  train_job.sh
chap2/: 2.1_data_manipulation.ipynb  2.1_data_manipulation.py  2.2_data_preprocessing.py  2.3_linear_algebra.ipynb  2.3_linear_algebra.py  2.4_calculus.ipynb  2.4_calculus.py  2.5_automatic_differentiation.ipynb  2.5_automatic_differentiation.py  2.6_probability_and_statistics.ipynb  2.6_probability_and_statistics.py  2.7_documentation.ipynb  2.7_documentation.py
chap3/: 3.1_linear_regression.py  3.3_synthetic_regression_data.py  3.4_linear_regression_torch.py  3.5_linear_regression.py  3.5_liner_regression_consice.ipynb  3.6&7_generalization_weight_decay.py  3.6&7_generalization_weight_decay_torch.py
chap4/: 4.2_image_classification_dataset.py  4.4_softmax_classifier.py  4.4_softmax_classifier_torch.py
chap5/: 5.1_multilayer_perceptrons.py  5.2_implementation_of_multilayer_perceptrons.ipynb  5.2_implementation_of_multilayer_perceptrons.py  5.6_dropout.ipynb  5.6_dropout.py
chap6/: 6.1_layers_and_modules.ipynb  6.1_layers_and_modules.py  6.2_parameter_management.ipynb  6.2_parameter_management.py  6.3_parameter_initialization.ipynb  6.3_parameter_initialization.py  6.4_lazy_layers.ipynb  6.4_lazy_layers.py  6.5_custom_layers.ipynb  6.5_custom_layers.py  6.6_file_io.ipynb  6.6_file_io.py  6.7_gpu.ipynb  6.7_gpu.py
chap7/: 7.1-7.5_cnn_exp.py  7.6_lenet.py
chap8/: 8.1_alexnet.py  8.2_vgg.py  8.3_nin.py  8.4_googlenet.py  8.5_lenet_bn.py  8.5_resnet.py  8.7_densenet.py
(+70 files in other folders)
